# Search-Engine-For-Academic-Papers

./: AVLTree.cpp  AVLTree.h  CMakeLists.txt  DocParser.cpp  DocParser.h  HashTable.h  IndexHandler.cpp  IndexHandler.h  QueryProcessor.cpp  QueryProcessor.h  README.md  configFile  main.cpp  sample.json  stopWords.csv
.github/workflows/: build.yaml
html/: AVLTree_8h_source.html  DocParser_8h_source.html  HashTable_8h_source.html  IndexHandler_8h_source.html  QueryProcessor_8h_source.html  annotated.html  classAVLTree-members.html  classAVLTree.html  classDocParser-members.html  classDocParser.html  classHashTable-members.html  classHashTable.html  classIndexHandler-members.html  classIndexHandler.html  classIndexHandler__coll__graph.map  classIndexHandler__coll__graph.md5  classQueryProcessor-members.html  classQueryProcessor.html  classQueryProcessor__coll__graph.map  classQueryProcessor__coll__graph.md5  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  md_README.html  pages.html  porter2__stemmer_8cpp.html  porter2__stemmer_8cpp__incl.map  porter2__stemmer_8cpp__incl.md5  porter2__stemmer_8h.html  porter2__stemmer_8h__dep__incl.map  porter2__stemmer_8h__dep__incl.md5  porter2__stemmer_8h__incl.map  porter2__stemmer_8h__incl.md5  porter2__stemmer_8h_source.html  structTreeNode-members.html  structTreeNode.html  (+2 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+3 more)
